# hatching

./: CMakeLists.txt  README.md  main.cpp
data/image/tiled/: tiled.xcf
src/: Camera.cpp  Camera.h  Cube.cpp  Cube.h  Image.cpp  Image.h  Material.cpp  Material.h  Mesh.cpp  Mesh.h  ObjMesh.cpp  ObjMesh.h  Program.cpp  Program.h  RenderPass.cpp  RenderPass.h  Renderer.cpp  Renderer.h  Screen.cpp  Screen.h  Shader.cpp  Shader.h  Sphere.cpp  Sphere.h  Texture.cpp  Texture.h  UniformBase.h  UniformF.cpp  UniformF.h  UniformI.cpp  UniformI.h  UniformVec3.cpp  UniformVec3.h  Util.cpp  Util.h  commonincludes.h  fragment.glsl
src/shaders/: brushFragment.glsl  flatFragment.glsl  fragment.glsl  hatching0.glsl  phong.glsl  raymarching.glsl  vertex.glsl  vertexScaledTextures.glsl
